src/tests/snapshots/gitu__tests__branch__rename_current_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch main-rename                                                          |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main-rename origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -m main main-rename                                                |
styles_hash: 89a6b9cc378b1c3b
