src/tests/snapshots/gitu__tests__branch__switch_branch_picker.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main merged origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 4/4   Checkout › █                                                             |
▌merged                                                                         |
 unmerged                                                                       |
 origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a64f5b0f5c87b3e5
